PROJECT (dbfi CXX)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (DBFI_VERSION "2.1")

SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

SET (Boost_USE_STATIC_LIBS ON)
SET (Boost_USE_MULTITHREADED ON)
SET (Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE (Boost 1.50.0 REQUIRED program_options)

FIND_PACKAGE (Git REQUIRED)
INCLUDE (GetGitRevisionDescription)
GET_GIT_HEAD_REVISION (GIT_REFSPEC GIT_HASH)

IF (CMAKE_COMPILER_IS_GNUCXX OR ("${CMAKE_CXX_COMPIKER_ID}" STREQUAL "Clang"))
	ADD_DEFINITIONS (-std=c++0x)
ENDIF ()

ADD_SUBDIRECTORY (src)

