FILE (GLOB dbfi_SOURCES *.cxx)
FILE (GLOB dbfi_HEADERS *.hxx)

CONFIGURE_FILE (config.hxx.in config.hxx @ONLY)

SET (CMAKE_INCLUDE_CURRENT_DIR ON)

INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE (dbfi ${dbfi_SOURCES} ${dbfi_HEADERS})
TARGET_LINK_LIBRARIES (dbfi ${Boost_LIBRARIES})

INSTALL (TARGETS dbfi DESTINATION bin)

