FILE (GLOB dbfi_SOURCES *.cxx)
FILE (GLOB dbfi_HEADERS *.hxx)

CONFIGURE_FILE (config.hxx.in config.hxx @ONLY)

SET (CMAKE_INCLUDE_CURRENT_DIR ON)

INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE (dbfi ${dbfi_SOURCES} ${dbfi_HEADERS})
TARGET_LINK_LIBRARIES (dbfi ${Boost_LIBRARIES})

INSTALL (TARGETS dbfi DESTINATION bin)

SET (CPACK_PACKAGE_NAME "dbfi")
SET (CPACK_STRIP_FILES "bin/dbfi")
SET (CPACK_PACKAGE_EXECUTABLES "dbfi")
SET (CPACK_PACKAGE_VERSION "2.1.2")
SET (CPACK_PACKAGE_VERSION_MAJOR "2")
SEt (CPACK_PACKAGE_VERSION_MINOR "1")
SET (CPACK_PACKAGE_VERSION_PATCH "2")
SET (CPACK_PACKAGE_CONTACT "felix.bytow@googlemail.com")
SET (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING")
IF (WIN32 AND NOT UNIX)
	SET (NATIVE "NSIS")
ELSE ()
	SET (NATIVE "RPM;DEB")
ENDIF ()
SET (CPACK_GENERATOR "TGZ;TBZ2;ZIP;${NATIVE}")
INCLUDE (CPack)

